# Task-List

./: Cargo.toml  LICENSE.txt  README.md  book_of_specification.tex  build.rs  report.tex  save.json  task_data.json  test.json  test_export.json  test_import.json
Task_List/: Cargo.toml
Task_List/src/: app.rs  main.rs  message.rs
Task_List/src/Task-Manger/: Task.rs  Task_list.rs
Task_List/src/view/: all_tasks.rs  calendar.rs  mod.rs  settings.rs  sidebar.rs  view.rs
docs/: accueil.html  index.html  style.css
docs/connexion/: connection.html  connexion.php  style.css
gantt_chart/: gantt_diagram.gantt
src/: app.rs  main.rs  message.rs
src/task_manager/: category.rs  category_list.rs  mod.rs  saving.rs  task.rs  task_list.rs
src/view/: add_category_popup.rs  add_task_popup.rs  all_tasks.rs  calendar.rs  category_tasks.rs  mod.rs  popup_utils.rs  rename_category_popup.rs  settings.rs  sidebar.rs  task_detail_popup.rs  tasks_view_utils.rs  view.rs
