[package]
name = "Task_List"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
iced = { version = "0.14", features = ["svg"] }
num-traits = "0.2.19"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.10"
[build-dependencies]
winres = "0.1.12"
